--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,11 +78,19 @@ table {
   margin-bottom: 20px;
 }
 
+.pool_items{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  width: 100%;
+}
+
 .pool_item{
   border: 1px solid #000;
   padding: 10px;
   border-radius: 10px;
   margin-bottom: 10px;
+  width: 250px;
 }
 
 .pool_item_title{
@@ -93,8 +101,9 @@ table {
 
 .pool_item_details{
   display: flex;
-  align-items: center;
+  justify-content: center;
   gap: 20px;
+  flex-direction: column;
 }
 
 
